<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/go_button1"
                android:layout_width="match_parent"
                android:layout_height="202dp"
                android:text="@string/go_button_title" />

            <Button
                android:id="@+id/go_button2"
                android:layout_width="match_parent"
                android:layout_height="139dp"
                android:text="@string/go_button2_title" />

            <Button
                android:id="@+id/go_button4"
                android:layout_width="match_parent"
                android:layout_height="109dp"
                android:text="@string/go_button4_title" />

            <Button
                android:id="@+id/go_button3"
                android:layout_width="match_parent"
                android:layout_height="108dp"
                android:text="@string/go_button3_title" />

            <Button
                android:id="@+id/go_button5"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:text="@string/go_button5_title" />
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>